fixed thumbnails to be more readable

--- a/client/components/Nav/style.scss
+++ b/client/components/Nav/style.scss
@@ -6,7 +6,7 @@
   background: $gray-darkest;
   border-bottom: solid 4px $gray;
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   top: 0;
   .nav-container {
     width: $container-width;
