--- a/client/components/Thumbnail/style.scss
+++ b/client/components/Thumbnail/style.scss
@@ -15,12 +15,9 @@
   opacity: 0.0;
   &:hover {
     cursor: pointer;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    .thumb-link {
-      img {
-        opacity: 0.0;
-      }
+    .circle {
+      -webkit-filter: grayscale(100%);
+              filter: grayscale(100%);
     }
   }
   @media(max-width: 560px) {
@@ -44,9 +41,24 @@
       -webkit-transition: opacity 0.3s ease;
       transition: opacity 0.3s ease;
     }
-    h1 {
-      color: $orange-main;
-      padding: 4px;
+    .circle {
+      width: 80%;
+      height: 80%;
+      position: absolute;
+      z-index: 3;
+      border-radius: 50%;
+      background-size: cover;
+      -webkit-transition: -webkit-filter 0.5s ease;
+      transition: -webkit-filter 0.5s ease;
+      transition: filter 0.5s ease;
+      transition: filter 0.5s ease, -webkit-filter 0.5s ease;
+    }
+    .circle-text {
+      z-index: 3;
+      h1 {
+        color: $orange-main;
+        padding: 4px;
+      }
     }
   }
 }
